--- a/FrontEnd/ProductoApi/src/app/Shared/nav-bar/nav-bar.component.html
+++ b/FrontEnd/ProductoApi/src/app/Shared/nav-bar/nav-bar.component.html
@@ -13,7 +13,7 @@
 
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="'/cliente-list'" routerLinkActive="active">Lista de clientes</a>
+          <a class="nav-link" [routerLink]="'/clientes-list'" routerLinkActive="active">Lista de clientes</a>
 
         </li>
       </ul>
