--- a/FrontEnd/ProductoApi/src/app/Clientes/components/tr-cliente/tr-cliente.component.html
+++ b/FrontEnd/ProductoApi/src/app/Clientes/components/tr-cliente/tr-cliente.component.html
@@ -1,19 +1,7 @@
 <tr>
-
-  <td>
-    {{cliente.nombre}}
-  </td>
-  <td>
-    {{cliente.apellido}}
-  </td>
-  <td>
-    {{cliente.email}}
-  </td>
-  <td>
-    {{cliente.telefono}}
-  </td>
-  <td>
-    {{cliente.id}}
-  </td>
-
+    <td>{{cliente.nombre}}</td>
+    <td>{{cliente.apellido}}</td>
+    <td>{{cliente.email}}</td>
+    <td>{{cliente.telefono}}</td>
+    <td>{{cliente.id}}</td>
 </tr>
