--- a/FrontEnd/ProductoApi/src/app/Shared/nav-bar/nav-bar.component.html
+++ b/FrontEnd/ProductoApi/src/app/Shared/nav-bar/nav-bar.component.html
@@ -25,6 +25,16 @@
           <a class="nav-link" [routerLink]="'/clientes-list'" routerLinkActive="active">Lista de clientes</a>
 
         </li>
+        <li class="nav-item">
+
+          <a class="nav-link" [routerLink]="'/productos-list'" routerLinkActive="active">Lista de Productos</a>
+
+        </li>
+        <li class="nav-item">
+
+          <a class="nav-link" [routerLink]="'/productos-form'" routerLinkActive="active">Formulario Productos</a>
+
+        </li>
 
       </ul>
 
