--- a/FrontEnd/ProductoApi/src/app/Productos/pages/productos-form/productos-form.component.html
+++ b/FrontEnd/ProductoApi/src/app/Productos/pages/productos-form/productos-form.component.html
@@ -78,4 +78,4 @@
 
 </div>
 <productos-modal-proveedores [proveedores]="proveedores"
-  (proveedorAEnviar)="recibirCliente($event)"></productos-modal-proveedores>
+  (proveedorAEnviar)="recibirProveedores($event)"></productos-modal-proveedores>
